[package]
name = "async_stack_traces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-concurrency = { git = "https://github.com/yoshuawuyts/futures-concurrency.git", rev = "9678a9e09865438828ce650c15a5b4997976ade5" }